--- a/race-fe/src/App.css
+++ b/race-fe/src/App.css
@@ -12,7 +12,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  padding-top: 70px;
+  /* min-height: 100vh; */
 }
 
 .button {
@@ -175,6 +176,9 @@ label {
   margin-bottom: 5px;
   color: #bdc3c7;
 }
+.form-field {
+  padding-top: 1em;
+}
 
 input[type="text"],
 input[type="number"] {
@@ -262,7 +266,6 @@ tr {
   border-bottom: 1px solid #2d3748;
 }
 
-
 .team-comparison-container {
   display: flex;
   justify-content: space-around;
@@ -271,6 +274,10 @@ tr {
 }
 
 .team-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Ensures spacing is even */
+  height: 350px; /* Fixed height, adjust as needed */
   background-color: #2a2a2a;
   color: #fff;
   padding: 20px;
@@ -284,6 +291,26 @@ tr {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
+.category-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px; 
+}
+
+.category-label {
+
+  font-size: 0.875rem; 
+  font-weight: bold;
+  color: #aaa; 
+  text-transform: uppercase;
+}
+
+.category-value {
+  text-align: right;
+  font-size: 1.25rem; 
+  color: #ddd; 
+  font-weight: normal;
+}
 .card-header {
   font-size: 1.5rem;
   color: #4daff7;
@@ -298,10 +325,34 @@ tr {
 
 /* Animation for when the content changes */
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .fade-in {
   animation: fadeIn 0.5s ease;
+}
+
+@keyframes throb {
+  0% {
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
+  }
+  50% {
+    box-shadow: 0 0 16px rgba(255, 255, 255, 0.8);
+  }
+  100% {
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
+  }
+}
+
+.highest-value {
+  display: inline-block;
+  padding: 4px 12px; /* Adjust size to fit content */
+  border-radius: 25px; /* Gives a pill shape */
+  background-color: rgba(255, 255, 255, 0.1); /* Soft white background */
+  animation: throb 2s infinite ease-in-out;
 }
